--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -14,15 +14,25 @@ jobs:
       - name: Check out repository
         uses: actions/checkout@v4
 
+      - name: Cache R packages
+        uses: actions/cache@v3
+        id: cache
+        with:
+          path: ${{ github.workspace }}
+          key: ${{ runner.os }}-${{ hashFiles('.github/R-version') }}-1-${{ hashFiles('.github/depends.Rds') }}
+          restore-keys: ${{ runner.os }}-${{ hashFiles('.github/R-version') }}-1-
+
       - name: Set up Quarto
         uses: quarto-dev/quarto-actions/setup@v2
 
       - name: Install R
+        if: steps.cache.outputs.cache-hit != 'true'
         uses: r-lib/actions/setup-r@v2
         with:
           r-version: '4.4.0'
 
       - name: Install RMarkdown
+        if: steps.cache.outputs.cache-hit != 'true'
         run: |
           install.packages(c("rmarkdown", "dplyr", "ggplot2", "plotly"))
           library("rmarkdown")
