Check removal of condition in action

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -35,7 +35,7 @@ jobs:
           r-version: '4.4.0'
 
       - name: Install R Packages
-        if: steps.cache.outputs.cache-hit != 'true'
+        # if: steps.cache.outputs.cache-hit != 'true'
         run: |
           install.packages(c("rmarkdown", "dplyr", "ggplot2", "plotly", "sessioninfo"))
           library("rmarkdown")
