--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -37,7 +37,10 @@ jobs:
       - name: Install R Packages
         # if: steps.cache.outputs.cache-hit != 'true'
         run: |
-          install.packages(c("rmarkdown", "dplyr", "ggplot2", "plotly", "sessioninfo"))
+          installed.packages()
+          dependencies <- c("rmarkdown", "dplyr", "ggplot2", "plotly", "sessioninfo")
+          needs_installation <- dependencies[!dependencies %in% installed.packages()]
+          install.packages(needs_installation)
           library("rmarkdown")
         shell: Rscript {0}
 
