--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -14,6 +14,18 @@ jobs:
       - name: Check out repository
         uses: actions/checkout@v4
 
+      - name: Cache R packages
+        uses: actions/cache@v3
+        id: cache
+        with:
+          path: ${{ github.workspace }}
+          key: ${{ runner.os }}-${{ hashFiles('.github/R-version') }}-1-${{ hashFiles('.github/depends.Rds') }}
+          restore-keys: ${{ runner.os }}-${{ hashFiles('.github/R-version') }}-1-
+
+      - name: Install libcurl
+        run: |
+          sudo apt-get install libcurl4-openssl-dev
+
       - name: Set up Quarto
         uses: quarto-dev/quarto-actions/setup@v2
 
@@ -21,6 +33,16 @@ jobs:
         uses: r-lib/actions/setup-r@v2
         with:
           r-version: '4.4.0'
+
+      - name: Install R Packages
+        # if: steps.cache.outputs.cache-hit != 'true'
+        run: |
+          installed.packages()
+          dependencies <- c("rmarkdown", "dplyr", "ggplot2", "plotly", "sessioninfo")
+          needs_installation <- dependencies[!dependencies %in% installed.packages()]
+          install.packages(needs_installation)
+          library("rmarkdown")
+        shell: Rscript {0}
 
       - name: Render and Publish
         uses: quarto-dev/quarto-actions/publish@v2
