--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -31,6 +31,7 @@ jobs:
         with:
           cache-version: 1
           packages: |
+            deps::.
             any::rmarkdown
             any::dplyr
             any::ggplot2
