--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -33,8 +33,8 @@ jobs:
           packages: |
             any::rmarkdown
             any::dplyr
-            any::ggplot2
-            any::plotly
+            ggplot2@v3.5.1
+            plotly@v4.10.4
             any::sessioninfo
 
       - name: Render and Publish
