Use package caching correctly (#263)
* Use setup-r-dependencies action

* Fix argument for package installation

See comment https://github.com/r-lib/actions/issues/725#issuecomment-1533239306

* Install any found dependencies with deps::.

* Remove deps::. call

* Use specific versions for ggplot2 and plotly

* Fix syntax

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -27,13 +27,15 @@ jobs:
           r-version: '4.4.0'
 
       - name: Install R Packages
-        run: |
-          installed.packages()
-          dependencies <- c("rmarkdown", "dplyr", "ggplot2", "plotly", "sessioninfo")
-          needs_installation <- dependencies[!dependencies %in% installed.packages()]
-          install.packages(needs_installation)
-          library("rmarkdown")
-        shell: Rscript {0}
+        uses: r-lib/actions/setup-r-dependencies@v2
+        with:
+          cache-version: 1
+          packages: |
+            any::rmarkdown
+            any::dplyr
+            ggplot2@3.5.1
+            plotly@4.10.4
+            any::sessioninfo
 
       - name: Render and Publish
         uses: quarto-dev/quarto-actions/publish@v2
