add edit button

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -10,6 +10,8 @@ website:
     border: false
   search:
     location: sidebar
+  repo-url: https://github.com/lmu-osc/Collaborative-RStudio-GitHub
+  repo-actions: [edit, issue]
   page-navigation: true
   navbar:
     left:
