--- a/_quarto.yml
+++ b/_quarto.yml
@@ -13,6 +13,9 @@ website:
   repo-url: https://github.com/lmu-osc/Collaborative-RStudio-GitHub
   repo-actions: [edit, issue]
   page-navigation: true
+  favicon: assets/LMU-OSC_favicon.jpg
+  margin-header: |
+  ![](/assets/LMU-OSC_logo.jpg){width="175"}
   navbar:
     left:
       - href: index.md
@@ -41,7 +44,9 @@ website:
 
 format:
   html:
-    theme: cosmo
+    theme: 
+      - cosmo
+      - custom.scss
     css: styles.css
     toc: true
 
