--- a/_quarto.yml
+++ b/_quarto.yml
@@ -13,7 +13,7 @@ website:
   repo-url: https://github.com/lmu-osc/Collaborative-RStudio-GitHub
   repo-actions: [edit, issue]
   page-navigation: true
-  favicon: assets/LMU_OSC_Book.png
+  favicon: assets/LMU_OSC_favicon.jpg
   margin-header: |
     ![](/assets/LMU-OSC_logo.jpg){width="175"}
   navbar:
