--- a/_quarto.yml
+++ b/_quarto.yml
@@ -49,6 +49,8 @@ format:
       - custom.scss
     css: styles.css
     toc: true
+    include-in-header:
+      - file: matomo-analytics.html
 
 
 
