--- a/_quarto.yml
+++ b/_quarto.yml
@@ -50,7 +50,7 @@ format:
     css: styles.css
     toc: true
     include-in-header:
-      - file: matomo-analytics.html
+      - file: matomo_analytics.html
 
 
 
